[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rtk"
version = "0.1.0"
description = "Objective-driven adversarial testing framework for GenAI systems aligned with OWASP GenAI risks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Koray Danışma" }
]

keywords = [
    "ai-security",
    "genai",
    "red-team",
    "owasp",
    "prompt-injection",
    "llm-security",
    "adversarial-testing"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "requests>=2.28.0",
    "matplotlib>=3.6.0"
]

[project.urls]
Homepage = "https://github.com/koraydns/llm-rtk"
Repository = "https://github.com/koraydns/llm-rtk"

[project.scripts]
llm-rtk = "llm_rtk.cli:main"

[tool.setuptools.packages.find]
include = ["llm_rtk*"]